[package]
name = "tsv_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
textdb = "0.1.0"
anyhow = "1.0.95"
clap-v3 = "3.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10.0"

[profile.release]
strip = true # strip
